feat(view and update user profiles)- Create functionality to view user profile- Create functionality to edit user profile- Update user model, migration and seedersfinishes(162414233) (#28)
